--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "slider": "^1.0.4",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
