changes in  projects  text

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,7 +2,7 @@
   {
     "title": "Hotellet Bonz.ai",
     "imageSrc": "projects/BonziHotels.png",
-    "description": "Responsive website with Semantic HTML, CSS Grid, and Flexbox. Task was to create landing, facility and booking page.",
+    "description": "School project Responsive website crafted with Semantic HTML and CSS. Explore a captivating landing page, discover our facilities, and seamlessly make bookings.",
     "skills": ["Html", "CSS", "Flexbox", "Grid"],
     "demo": "https://bonzi-hotels.netlify.app/",
     "source": "https://github.com/UshaKumari89/Bonzi_website/tree/master"
@@ -10,7 +10,7 @@
   {
     "title": "Solar System",
     "imageSrc": "projects/Solar-system.png",
-    "description": "Vanilla JavaScript, and Task was to craete a Search and click functionality as well as presenting each planet. ",
+    "description": "A school project crafted with Vanilla JavaScript, showcasing a search and click functionality while providing detailed information about each celestial body in our solar system. ",
     "skills": ["Html", "CSS", "JavaScript"],
     "demo": "https://planetsdcf529.netlify.app/",
     "source": "https://github.com/UshaKumari89/solarSystem/tree/master"
@@ -18,7 +18,7 @@
   {
     "title": "CRUD-App-React",
     "imageSrc": "projects/Contact-App.png",
-    "description": "React project in which i use redux store to map objects from json file, Then Task was to create, update and delete items from store. ",
+    "description": "Utilizing Redux, this school project efficiently maps objects from a JSON file and takes on the challenge of creating, updating, and deleting items within the store. ",
     "skills": ["React", "Redux", "Sass"],
     "demo": "https://stalwart-dasik-9149e2.netlify.app/",
     "source": "https://github.com/UshaKumari89/crud-react-final-exam"
@@ -27,9 +27,17 @@
   {
     "title": "Air-beans-Node",
     "imageSrc": "projects/Solar-system.png",
-    "description": "Backend project in which i have used Express and NeDb. Task was to create, update and delete products in muen. ",
+    "description": "An Express and NeDb school project focused on seamless product management within a digital marketplace, featuring create, update, and delete functionalities.. ",
     "skills": ["Node", "Express", "NeDB"],
     "demo": "https://github.com/UshaKumari89/Air-beans-Exams",
     "source": "https://github.com/UshaKumari89/Air-beans-Exams"
+  },
+  {
+    "title": "Resturant App",
+    "imageSrc": "projects/resturant.png",
+    "description": "Explore this website crafted during a summer of Bootstrap learning, where the magic of components was discovered and transformed into a digital masterpiece..",
+    "skills": ["Html", "CSS", "Bootstrap"],
+    "demo": "https://cooking-home.netlify.app/",
+    "source": "https://github.com/UshaKumari89/Home_cooking"
   }
 ]
